--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-netlify": "^2.3.10",
     "gatsby-plugin-offline": "^3.2.16",
     "gatsby-plugin-react-helmet": "^3.3.9",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^2.6.17",
     "gatsby-remark-prismjs": "^3.5.9",
     "gatsby-remark-reading-time": "^1.1.0",
