--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-react-helmet": "^3.3.9",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^2.6.17",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-remark-prismjs": "^3.5.9",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-source-filesystem": "^2.3.18",
@@ -27,6 +28,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-scroll": "^1.8.2",
     "typeface-nunito": "1.1.3"
   },
   "devDependencies": {
