--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-offline": "^3.2.16",
     "gatsby-plugin-react-helmet": "^3.3.9",
     "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-remote-images": "^2.4.0",
     "gatsby-plugin-sharp": "^2.6.17",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-remark-prismjs": "^3.5.9",
