--- a/package.json
+++ b/package.json
@@ -5,35 +5,37 @@
   "version": "0.1.0",
   "author": "Niklas Metje <hi@niklasmtj.de>",
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "gatsby": "^2.23.18",
-    "gatsby-image": "^2.4.12",
-    "gatsby-plugin-emotion": "^4.3.9",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-netlify": "^2.3.10",
-    "gatsby-plugin-offline": "^3.2.16",
-    "gatsby-plugin-react-helmet": "^3.3.9",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "gatsby": "^3.5.1",
+    "gatsby-image": "^3.5.0",
+    "gatsby-plugin-emotion": "^6.5.0",
+    "gatsby-plugin-manifest": "^3.5.0",
+    "gatsby-plugin-netlify": "^3.5.0",
+    "gatsby-plugin-offline": "^4.5.1",
+    "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-remote-images": "^2.4.0",
-    "gatsby-plugin-sharp": "^2.6.17",
+    "gatsby-plugin-remote-images": "^3.0.0",
+    "gatsby-plugin-sharp": "^3.5.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-remark-prismjs": "^3.5.9",
+    "gatsby-remark-katex": "^5.2.0",
+    "gatsby-remark-prismjs": "^5.2.1",
     "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-source-filesystem": "^2.3.18",
-    "gatsby-transformer-remark": "^2.8.23",
-    "gatsby-transformer-sharp": "^2.5.10",
-    "prism-themes": "^1.4.0",
-    "prismjs": "^1.20.0",
+    "gatsby-source-filesystem": "^3.5.0",
+    "gatsby-transformer-remark": "^4.2.0",
+    "gatsby-transformer-sharp": "^3.5.0",
+    "prism-themes": "^1.7.0",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scroll": "^1.8.2",
-    "typeface-nunito": "1.1.3"
+    "typeface-nunito": "1.1.13"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^2.3.0"
   },
   "keywords": [
     "gatsby"
