--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^3.5.0",
     "gatsby-transformer-remark": "^4.2.0",
     "gatsby-transformer-sharp": "^3.5.0",
+    "katex": "^0.12.0",
     "prism-themes": "^1.7.0",
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
